# CA_HW2

./: .gitignore  CMakeLists.txt  Makefile
asm/: Hanoi.s  hello.s  hello_pro.s  linker.ld  q1-uf8.s
scripts/: run_emu.cmake
tests/: test_hello.cmake
toolchain/: riscv_toolchain.cmake
